--- a/views/login_signup.ejs
+++ b/views/login_signup.ejs
@@ -10,7 +10,7 @@
   <body>
     <div class="container" id="container">
     	<div class="form-container sign-up-container">
-    		<form action="/home" method="post">
+    		<form action="/signup" method="post">
           <img src="images/user.png" alt="user-img">
     			<h1>Create Account</h1>
     			<input type="text" placeholder="Name" required/>
@@ -21,7 +21,7 @@
     		</form>
     	</div>
     	<div class="form-container sign-in-container">
-    		<form action="/home" method="post">
+    		<form action="/signin" method="post">
     			<h1>Sign in</h1>
     			<input type="email" placeholder="Email" required/>
     			<input type="password" placeholder="Password" />
