--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,7 +88,7 @@ form {
 	text-align: center;
 }
 
-input {
+input, select{
   border:none;
   outline: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
@@ -96,6 +96,10 @@ input {
 	margin: 8px 0;
 	width: 100%;
   text-align: center;
+}
+
+.gender-sel{
+	background-color: white;
 }
 
 ::placeholder{
