--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,9 @@
       <a class="navbar-brand" href="">Logo</a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="">Link</a>
+          <a class="nav-link" style="font-weight:bold"> Hello!
+             <%= name %>
+            </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="">About</a>
