--- a/views/login_signup.ejs
+++ b/views/login_signup.ejs
@@ -8,27 +8,35 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
     <div class="container" id="container">
     	<div class="form-container sign-up-container">
     		<form action="/signup" method="post">
           <img src="images/user.png" alt="user-img">
     			<h1>Create Account</h1>
-    			<input type="text" placeholder="Name" required/>
-    			<input type="email" placeholder="Email" required />
-          <input type="password" id="password" placeholder="Password" required/>
-          <i class="fa-solid fa-eye-slash fa-sm" id="eye"></i>
-    			<button>Sign Up</button>
+    			<input type="text" name="IDname" placeholder="Name">
+    			<input type="email" name="email" placeholder="Email" required >
+          <!-- <input type="password" id="password" placeholder="Password" >
+          <i class="fa-solid fa-eye-slash fa-sm" id="eye"></i> -->
+          <select class="gender-sel" name="gender">
+            <option disabled selected>Choose Gender</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
+    			<button type="submit">Sign Up</button>
     		</form>
     	</div>
+
     	<div class="form-container sign-in-container">
     		<form action="/signin" method="post">
     			<h1>Sign in</h1>
-    			<input type="email" placeholder="Email" required/>
-    			<input type="password" placeholder="Password" required/>
+    			<input type="email" placeholder="Email" name="inemail" required/>
+    			<input type="password" placeholder="Password" />
     			<a href="#">Forgot your password?</a>
     			<button>Sign In</button>
     		</form>
     	</div>
+
     	<div class="overlay-container">
     		<div class="overlay">
     			<div class="overlay-panel overlay-left">
