--- a/asset/loginstyle.css
+++ b/asset/loginstyle.css
@@ -100,9 +100,13 @@ h1 span {
 }
 
 .login_cont {
-    margin-top: 50%;
+    height: 90vh;
+    display: flex;
+    align-items: center;
 }
-
+.login-sheet{
+    margin-bottom: 50%;
+}
 .hr-text {
     line-height: 1em;
     position: relative;
@@ -185,12 +189,16 @@ h4 {
     background-color: #5692ab;
     margin: 20px 0;
 }
+        .footer-text {
 
+        }
 .footer-text{
+    position: fixed;
+    width: 30%;
+    bottom: 20px;
     display:flex;
     align-items: center;
     justify-content: center;
-    margin-top: 150%;
 }
 
 @media screen and (max-width: 890px) {
@@ -217,19 +225,26 @@ h4 {
         text-align: center;
         font-size: 2.5rem;
         width: auto;
+        height: 10%;
     }
 
     .login__card {
+        margin-top: 2%;
         font-size: 2.4rem;
         width: auto;
-        height: 100vh;
+        height:70vh
     }
 
     .login_cont {
-        margin: 95px auto;
+        margin-top: 12vh;
+        display: block;
+        /* height: 20vh; */
+    }
+    .login-sheet{
+        margin-bottom: 0%;
     }
     .footer-text{
-        margin-top: 65%;
+        width: 100%;
     }
 
 }
