--- a/asset/loginstyle.css
+++ b/asset/loginstyle.css
@@ -17,7 +17,7 @@ body {
     font-size: 3.7rem;
     width: 70%;
     line-height: 1.2;
-    margin-top: 10%;
+    margin-top: 15%;
 }
 
 .greetings p {
@@ -27,10 +27,29 @@ body {
     width: 70%;
 }
 
-h1 span {
-    font-size: 8rem;
-    color: #e7e3c0;
-    letter-spacing: 3px;
+#animation h1 span {
+    animation: jump 2s ease-in-out infinite;
+}
+
+#animation h1 span:nth-child(1){
+    animation-delay:0.2s;
+}
+#animation h1 span:nth-child(2){
+    animation-delay:0.4s;
+}
+#animation h1 span:nth-child(3){
+    animation-delay:0.6s;
+}
+@keyframes jump{
+    0%{
+        opacity:0;
+    }
+    50%{
+        opacity:1;
+    }
+    100%{
+        opacity:0;
+    }
 }
 
 .v-sheet {
