--- a/asset/loginstyle.css
+++ b/asset/loginstyle.css
@@ -10,14 +10,21 @@ body {
 
 .main-head {
     text-align: left;
-    margin-left: 10%;
+    margin-left: 15%;
 }
-
+.top-left-image {
+    position: absolute;
+    top: 10px;
+    left: 25px;
+    width: 50px; /* Set your desired width */
+    height: 50px; /* Set your desired height */
+    /* Add any other styles you want for the image */
+  }
 .greetings {
     font-size: 3.7rem;
     width: 70%;
     line-height: 1.2;
-    margin-top: 10%;
+    margin-top: 15%;
 }
 
 .greetings p {
@@ -27,10 +34,29 @@ body {
     width: 70%;
 }
 
-h1 span {
-    font-size: 8rem;
-    color: #e7e3c0;
-    letter-spacing: 3px;
+#animation h1 span {
+    animation: jump 2s ease-in-out infinite;
+}
+
+#animation h1 span:nth-child(1){
+    animation-delay:0.2s;
+}
+#animation h1 span:nth-child(2){
+    animation-delay:0.4s;
+}
+#animation h1 span:nth-child(3){
+    animation-delay:0.6s;
+}
+@keyframes jump{
+    0%{
+        opacity:0;
+    }
+    50%{
+        opacity:1;
+    }
+    100%{
+        opacity:0;
+    }
 }
 
 .v-sheet {
@@ -144,7 +170,7 @@ h1 span {
     color: black;
     background-color: #e3dcdc;
     padding: 20px;
-    font-size: large;
+    font-size: small;
 }
 
 img {
@@ -186,12 +212,10 @@ h4 {
 }
 
 #sub {
-    background-color: #5692ab;
+    background-color: #56ab7c;
     margin: 20px 0;
 }
-        .footer-text {
 
-        }
 .footer-text{
     position: fixed;
     width: 30%;
@@ -199,7 +223,14 @@ h4 {
     display:flex;
     align-items: center;
     justify-content: center;
+    font-size: 13.5px;
 }
+.footer-image {
+    /* Set the image size as needed */
+    width: 50px; /* Adjust the width to your preference */
+    height: auto; /* Auto adjust the height to maintain aspect ratio */
+}
+
 
 @media screen and (max-width: 890px) {
     html {
