--- a/asset/mainstyle.css
+++ b/asset/mainstyle.css
@@ -1,11 +1,11 @@
-body{
+body {
   font-family: 'Space Grotesk', sans-serif;
 }
 
 .samimg {
-  width: 100%;
-  height:fit-content;
-  max-height: 100vh;
+  object-fit: contain;
+  max-height: 100%;
+  max-width: 100%;
   align-self: center;
   padding: 10px;
 }
@@ -18,7 +18,11 @@ body{
 }
 
 #myFileInput {
-    display: none;
+  display: none;
+}
+
+.drag-place {
+  position: absolute;
 }
 
 #card {
@@ -27,41 +31,56 @@ body{
   margin: 0px 5px 22px;
   border-radius: 12px;
 }
-#card .toolbr{
-  background-color:#111112;
+
+#card .toolbr {
+  background-color: #111112;
 }
-#toolContainer{
+
+#toolContainer {
   padding: 20px;
-  border-radius:20px;
+  border-radius: 20px;
 }
-#tool-label{
+
+#tool-label {
   font-size: 1.2rem;
   font-weight: 500;
   letter-spacing: 0.0125em;
-  display:flex;
-  padding: 20px 30px ;
+  display: flex;
+  padding: 20px 30px;
   justify-content: space-between;
 }
+
 .slid {
   padding: 15px 25px;
 }
+
 .toolbr {
   text-align: center;
   padding: 6px;
 }
-#txt{
+
+#txt {
   overflow-y: auto;
 }
-#is-loading{
+
+#is-loading {
   position: absolute;
   align-self: center;
-  background-color: rgba(25, 23, 23,0.7);
-  /* padding:20% 25%; */
-  height: 100% !important;
-  width: 100% !important;
+  background-color: transparent !important;
+  height: 10% !important;
+  width: 10% !important;
   z-index: 1;
 
 }
+
+.alert-err {
+  position: absolute !important;
+  z-index: 2000;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 80px;
+}
+
 @media screen and (min-width:1280px) {
   #footerset {
     display: none;
@@ -69,5 +88,22 @@ body{
 
   #subb {
     display: none;
+  }
+}
+
+@media screen and (max-width:1280px) {
+  .alert-err {
+    font-size: 0.85rem;
+    margin: 80px 6%;
+    left: 0;
+    transform: translateX(0)
+  }
+
+  @media screen and (max-width:768px) {
+
+    #is-loading {
+      height: 15% !important;
+      width: 15% !important;
+    }
   }
 }
